--- a/App/App.fsproj
+++ b/App/App.fsproj
@@ -55,6 +55,9 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="Program.fs" />
+    <Content Include="myConfig2.fsx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="myConfig.fsx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
